--- a/_posts/2017-08-29-the-gut.md
+++ b/_posts/2017-08-29-the-gut.md
@@ -9,5 +9,6 @@ Gut: The Inside Story of Our Body's Most Underrated Organ
 
 ![gut]({{ site.url }}/assets/gut.jpg)
 
-I consumed this in [audio form for Audible so if you prefer that here you go]({https://www.audible.com/pd/Science-Technology/Gut-Audiobook/B01BPKQ56Q})
+I consumed this in [audio form for Audible so if you prefer that here you go][audible]
 
+[audible]: https://www.audible.com/pd/Science-Technology/Gut-Audiobook/B01BPKQ56Q
