Fixing theme, getting posts to work properly

--- a/_posts/2017-08-27-jekyll.md
+++ b/_posts/2017-08-27-jekyll.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Setting up your laptop for the Bootcamp"
 date:   2017-12-06 12:16:50 -0400
+category: Blog
 categories: jekyll update
 author: Basil Eltom
 ---
